# orkestra

./: .claudeignore  .dockerignore  .env.development  .env.example  .gitignore  .mise.toml  .plan  .plan.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile.daemon  Dockerfile.service  LICENSE  README.md  SCHEMA.md  VERIFICATION_CHECKLIST.md  biome.json  clippy.toml  docker-compose.daemon.yml  docker-compose.service.yml  index.html  knip.json  opencode.json  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  service.html  tailwind.config.js  vite.config.ts  vitest.config.ts
cli/: Cargo.toml
cli/src/: lib.rs  main.rs
cli/src/play/: finish.rs  mod.rs  run_loop.rs  setup.rs
cli/tests/: cli_integration.rs
crates/orkestra-agent/: CLAUDE.md  Cargo.toml  README.md
crates/orkestra-agent/src/: hook_server.rs  interface.rs  lib.rs  mock.rs  registry.rs  script_handle.rs  service.rs  types.rs
crates/orkestra-agent/src/interactions/: mod.rs
crates/orkestra-agent/tests/: pty_integration.rs
crates/orkestra-agent/tests/fixtures/: mock_claude_pty.sh  mock_claude_pty_crash.sh  mock_claude_pty_no_start.sh  send_hook.sh
crates/orkestra-core/: CLAUDE.md  Cargo.toml  README.md
crates/orkestra-core/src/: agents.rs  auto_tasks.rs  commit_message.rs  debug_log.rs  error.rs  init.rs  lib.rs  orchestrator.rs  pr_description.rs  process.rs  project.rs  session_logs.rs  tasks.rs  title.rs
crates/orkestra-core/src/adapters/: claude_spawner.rs  jsonl_store.rs  mod.rs  sqlite_store.rs  system_clock.rs
crates/orkestra-core/src/defaults/: README.md  run.sh  workflow.yaml  worktree_setup.sh
crates/orkestra-core/src/domain/: breakdown_output.rs  iterations.rs  log_entry.rs  mod.rs  planner_questions.rs  reviewer_output.rs  subtask_plan.rs  task.rs  work_loop.rs  worker_output.rs
crates/orkestra-core/src/ports/: clock.rs  mod.rs  process_spawner.rs  task_store.rs
crates/orkestra-core/src/prompt/: mod.rs  planner.rs  reviewer.rs  worker.rs
crates/orkestra-core/src/prompts/: examples.rs  mod.rs
crates/orkestra-core/src/services/: agent_service.rs  git_service.rs  mod.rs  project.rs  task_service.rs
crates/orkestra-core/src/state/: mod.rs  phase.rs  predicates.rs
crates/orkestra-core/src/testutil/: git_helpers.rs  mock_spawner.rs  mock_store.rs  mod.rs  test_orchestrator.rs
crates/orkestra-core/src/utility/: mod.rs
crates/orkestra-core/src/workflow/: api.rs  cleanup.rs  iteration.rs  log_service.rs  mod.rs  periodic.rs  prompt.rs
crates/orkestra-core/tests/: e2e.rs  e2e_workflow.rs  e2e_workflow_v2.rs
crates/orkestra-core/tests/e2e/: artifact_history.rs  assistant.rs  auto_resolve.rs  chat.rs  cleanup.rs  differential.rs  git_sync.rs  helpers.rs  integration.rs  interactive.rs  lock.rs  mermaid_validation.rs  mono_repo.rs  multi_project.rs  play.rs  pr_description_audit.rs  prewarm.rs  resources.rs  squash_commits.rs  stage_chat.rs  startup.rs  subtasks.rs  sync.rs  task_creation.rs  token_usage.rs  vibe.rs  workflow.rs
crates/orkestra-git/: CLAUDE.md  Cargo.toml  README.md
crates/orkestra-git/src/: interface.rs  lib.rs  mock.rs  service.rs  types.rs
crates/orkestra-git/src/interactions/: mod.rs
crates/orkestra-networking/: CLAUDE.md  Cargo.toml
crates/orkestra-networking/src/: bootstrap.html  diff_cache.rs  diff_types.rs  highlight.rs  lib.rs  server.rs  types.rs
crates/orkestra-networking/src/interactions/: mod.rs
crates/orkestra-networking/src/relay_client/: forwarder.rs  mod.rs
crates/orkestra-networking/tests/: e2e_relay.rs  relay_client.rs  websocket.rs
crates/orkestra-parser/: CLAUDE.md  Cargo.toml  README.md
crates/orkestra-parser/src/: claude.rs  codex.rs  interface.rs  lib.rs  opencode.rs  types.rs
crates/orkestra-parser/src/interactions/: mod.rs
crates/orkestra-process/: CLAUDE.md  Cargo.toml  README.md
crates/orkestra-process/src/: interface.rs  lib.rs  mock.rs  types.rs
crates/orkestra-process/src/interactions/: mod.rs
crates/orkestra-process/tests/: process_guard.rs
crates/orkestra-prompt/: CLAUDE.md  Cargo.toml  README.md
crates/orkestra-prompt/src/: lib.rs  service.rs  types.rs
crates/orkestra-prompt/src/interactions/: mod.rs
crates/orkestra-prompt/src/templates/: initial_prompt.md  output_format.md  system_prompt.md
crates/orkestra-service/: CLAUDE.md  Cargo.toml  Dockerfile.base  Dockerfile.toolbox  LICENSE
crates/orkestra-service/src/: daemon_supervisor.rs  database.rs  lib.rs  management.html  server.rs  types.rs
crates/orkestra-service/src/interactions/: mod.rs
crates/orkestra-service/tests/: e2e.rs
crates/orkestra-store/: CLAUDE.md  Cargo.toml  README.md
crates/orkestra-store/src/: connection.rs  interface.rs  lib.rs  mock.rs  service.rs  types.rs
crates/orkestra-store/src/interactions/: mod.rs
crates/orkestra-store/src/migrations/: V10__add_gate_result.sql  V11__add_chat_active.sql  V11__add_device_tokens.sql  V12__add_daemon_config.sql  V14__add_assistant_task_id.sql  V15__add_interactive_mode.sql  V16__flow_required.sql  V17__add_resources.sql  V19__add_workflow_artifacts.sql  (+17 more)
crates/orkestra-types/: CLAUDE.md  Cargo.toml  README.md
crates/orkestra-types/src/: lib.rs
crates/orkestra-utility/: CLAUDE.md  Cargo.toml  README.md
crates/orkestra-utility/src/: commit_message.rs  lib.rs  pr_description.rs  runner.rs  title.rs
daemon/: Cargo.toml
daemon/src/: main.rs
relay/: Cargo.toml
relay/src/: connection.rs  handler.rs  lib.rs  main.rs  server.rs  types.rs
relay/tests/: integration.rs
service/: Cargo.toml  build.rs
service/src/: embedded_spa.rs  main.rs  pwa.rs  service_ui.rs
src-tauri/: CLAUDE.md  Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: diff_cache.rs  error.rs  highlight.rs  lib.rs  main.rs  notifications.rs  project_init.rs  project_registry.rs  run_process.rs  startup.rs  state.rs
src-tauri/src/commands/: assistant.rs  diff.rs  external_tools.rs  git_actions.rs  human_actions.rs  mod.rs  project.rs  queries.rs  run_script.rs  save_image.rs  setup.rs  stage_chat.rs  task_crud.rs
(+1563 files in other folders)
