[workspace]
members = ["src-tauri", "cli", "daemon", "relay", "service", "crates/orkestra-agent", "crates/orkestra-core", "crates/orkestra-debug", "crates/orkestra-git", "crates/orkestra-networking", "crates/orkestra-parser", "crates/orkestra-process", "crates/orkestra-prompt", "crates/orkestra-relay-protocol", "crates/orkestra-schema", "crates/orkestra-service", "crates/orkestra-store", "crates/orkestra-types", "crates/orkestra-utility"]
resolver = "2"

[workspace.package]
description = "AI-powered task orchestration for software development"
license = "MIT"
repository = "https://github.com/tiniest-fox/orkestra"
edition = "2021"

[workspace.lints.clippy]
# Enable all and pedantic lints
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }

# Deny these in CI (treat as errors)
dbg_macro = "deny"
todo = "deny"

# Allow a few that are too noisy or don't apply
module_name_repetitions = "allow"  # common in Rust APIs
must_use_candidate = "allow"       # too many false positives
missing_errors_doc = "allow"       # we're in v0, docs can come later
missing_panics_doc = "allow"       # same

[profile.dev]
debug = "line-tables-only"       # ~20-40% faster builds, keeps backtraces
split-debuginfo = "unpacked"     # faster linking on macOS

[profile.dev.build-override]
opt-level = 3                    # faster proc-macros (serde, tauri)

[profile.ci]
inherits = "dev"
debug = 0                        # no debug info needed in CI, faster compile + link
