[package]
name = "orkestra-cli"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "CLI for Orkestra"

[lints]
workspace = true

[lib]
name = "orkestra_cli"
path = "src/lib.rs"

[[bin]]
name = "ork"
path = "src/main.rs"

[dependencies]
orkestra-core = { path = "../crates/orkestra-core" }
orkestra-types = { path = "../crates/orkestra-types" }
clap = { version = "4", features = ["derive"] }
serde = "1"
serde_json = "1"

[dev-dependencies]
orkestra-core = { path = "../crates/orkestra-core", features = ["testutil"] }
indexmap = "2"
tempfile = "3"
serde_yaml = "0.9"
chrono = "0.4"
