[package]
name = "orkestra-relay"
version = "0.1.2"
edition = "2021"
description = "Stateless WebSocket relay server for NAT/firewall traversal"

[[bin]]
name = "relay"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
axum = { version = "0.8", features = ["ws"] }
orkestra-relay-protocol = { path = "../crates/orkestra-relay-protocol" }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dashmap = "6"
governor = "0.7"
clap = { version = "4", features = ["derive", "env"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4"] }
subtle = "2"

[dev-dependencies]
tokio-tungstenite = "0.28"
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"
