[package]
name = "orkestra"
version = "0.1.0"
description = "Orchestrate multiple Claude Code instances"
authors = ["you"]
edition = "2021"

[lints]
workspace = true

[lib]
name = "orkestra_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "orkestra"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
orkestra-core = { path = "../crates/orkestra-core" }
tauri = { version = "2", features = [] }
tauri-plugin-notification = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dotenvy = "0.15"
syntect = "5.3"

[target.'cfg(unix)'.dependencies]
signal-hook = "0.3"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
