[package]
name = "orkestra"
version = "0.1.0"
description = "Orchestrate multiple Claude Code instances"
authors = ["you"]
edition = "2021"

[lints]
workspace = true

[lib]
name = "orkestra_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "orkestra"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
orkestra-core = { path = "../crates/orkestra-core" }
orkestra-networking = { path = "../crates/orkestra-networking" }
orkestra-types = { path = "../crates/orkestra-types" }
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-notification = "2"
tauri-plugin-shell = "2"
tauri-plugin-store = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dotenvy = "0.15"
syntect = "5.3"
chrono = "0.4"
urlencoding = "2"
tokio = { version = "1", features = ["process"] }
tracing = "0.1"
fix-path-env = { git = "https://github.com/tauri-apps/fix-path-env-rs" }

[target.'cfg(unix)'.dependencies]
signal-hook = "0.3"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
