[package]
name = "orkestra-agent"
version = "0.1.0"
edition = "2021"

[lints]
workspace = true

[features]
default = []
testutil = []

[dependencies]
orkestra-types = { path = "../orkestra-types" }
orkestra-process = { path = "../orkestra-process" }
orkestra-parser = { path = "../orkestra-parser" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
orkestra-agent = { path = ".", features = ["testutil"] }
tempfile = "3"
