[package]
name = "orkestra-agent"
version = "0.1.2"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Agent spawning and management for Orkestra"

[lints]
workspace = true

[features]
default = []
testutil = []

[dependencies]
orkestra-debug = { path = "../orkestra-debug" }
orkestra-types = { path = "../orkestra-types" }
orkestra-process = { path = "../orkestra-process" }
orkestra-parser = { path = "../orkestra-parser" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
portable-pty = "0.8"
tempfile = "3"
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
orkestra-agent = { path = ".", features = ["testutil"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"
