[package]
name = "orkestra-core"
version = "0.1.0"
edition = "2021"

[lints]
workspace = true

[features]
default = []
# Enables test utilities for integration tests
testutil = ["dep:tempfile"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
libc = "0.2"
indexmap = { version = "2", features = ["serde"] }
thiserror = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
refinery = { version = "0.8", features = ["rusqlite"] }
orkestra-git = { path = "../orkestra-git", features = ["testutil"] }
tempfile = { version = "3", optional = true }
handlebars = "6"
jsonschema = "0.26"
once_cell = "1"
petname = "2"
pulldown-cmark = { version = "0.12", default-features = false, features = ["html"] }
strip-ansi-escapes = "0.2"
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
tempfile = "3"
orkestra-core = { path = ".", features = ["testutil"] }
