[package]
name = "orkestra-core"
version = "0.1.0"
edition = "2021"

[lints]
workspace = true

[features]
default = []
# Enables test utilities for integration tests
testutil = ["dep:tempfile"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
libc = "0.2"
indexmap = { version = "2", features = ["serde"] }
thiserror = "1"
orkestra-git = { path = "../orkestra-git", features = ["testutil"] }
orkestra-process = { path = "../orkestra-process", features = ["testutil"] }
orkestra-schema = { path = "../orkestra-schema" }
orkestra-store = { path = "../orkestra-store", features = ["testutil"] }
orkestra-types = { path = "../orkestra-types" }
tempfile = { version = "3", optional = true }
handlebars = "6"
jsonschema = "0.26"
once_cell = "1"
strip-ansi-escapes = "0.2"
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
tempfile = "3"
orkestra-core = { path = ".", features = ["testutil"] }
