[package]
name = "orkestra-core"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Core orchestration library for Orkestra"

[lints]
workspace = true

[features]
default = []
# Enables test utilities for integration tests
testutil = ["dep:tempfile"]
# Compiles OpenSSL from source — required for cross-compilation (e.g. macOS CI universal binary)
vendored-openssl = ["orkestra-git/vendored-openssl"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
indexmap = { version = "2", features = ["serde"] }
thiserror = "1"
orkestra-agent = { path = "../orkestra-agent", features = ["testutil"] }
orkestra-debug = { path = "../orkestra-debug" }
orkestra-git = { path = "../orkestra-git", features = ["testutil"] }
orkestra-parser = { path = "../orkestra-parser" }
orkestra-prompt = { path = "../orkestra-prompt" }
orkestra-process = { path = "../orkestra-process", features = ["testutil"] }
orkestra-schema = { path = "../orkestra-schema" }
orkestra-store = { path = "../orkestra-store", features = ["testutil"] }
orkestra-types = { path = "../orkestra-types" }
orkestra-utility = { path = "../orkestra-utility", features = ["testutil"] }
tempfile = { version = "3", optional = true }
handlebars = "6"
strip-ansi-escapes = "0.2"
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
libc = "0.2"
tempfile = "3"
orkestra-core = { path = ".", features = ["testutil"] }
