[package]
name = "orkestra-git"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Git operations for Orkestra"

[lints]
workspace = true

[features]
default = []
# Enables MockGitService for integration tests
testutil = []

[dependencies]
serde = { version = "1", features = ["derive"] }
chrono = "0.4"
thiserror = "1"
git2 = "0.18"

[dev-dependencies]
tempfile = "3"
orkestra-git = { path = ".", features = ["testutil"] }
