[package]
name = "orkestra-networking"
version = "0.1.0"
edition = "2021"

[lints]
workspace = true

[dependencies]
orkestra-core = { path = "../orkestra-core" }
orkestra-types = { path = "../orkestra-types" }
axum = { version = "0.8", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
syntect = "5.3"
chrono = "0.4"
rusqlite = { version = "0.31", features = ["bundled"] }
sha2 = "0.10"
rand = "0.8"
subtle = "2"
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
tokio-tungstenite = "0.28"
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"
reqwest = { version = "0.12", features = ["json"] }
