[package]
name = "orkestra-networking"
version = "0.1.0"
edition = "2021"

[lints]
workspace = true

[dependencies]
orkestra-core = { path = "../orkestra-core" }
orkestra-relay-protocol = { path = "../orkestra-relay-protocol" }
orkestra-types = { path = "../orkestra-types" }
axum = { version = "0.8", features = ["ws"] }
tower-http = { version = "0.6", features = ["cors"] }
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.28", features = ["native-tls"] }
tokio-util = "0.7"
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
syntect = "5.3"
chrono = "0.4"
rusqlite = { version = "0.31", features = ["bundled"] }
sha2 = "0.10"
rand = "0.8"
subtle = "2"
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
orkestra-relay = { path = "../../relay" }
orkestra-store = { path = "../orkestra-store" }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
