[package]
name = "orkestra-parser"
version = "0.1.2"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Output parsing for Orkestra"

[lints]
workspace = true

[dependencies]
orkestra-types = { path = "../orkestra-types" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
jsonschema = "0.26"
thiserror = "1"
