[package]
name = "orkestra-process"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Process management for Orkestra"

[lints]
workspace = true

[features]
default = []
testutil = []

[dependencies]
serde_json = "1"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
orkestra-process = { path = ".", features = ["testutil"] }
