[package]
name = "orkestra-prompt"
version = "0.1.0"
edition = "2021"

[lints]
workspace = true

[dependencies]
orkestra-types = { path = "../orkestra-types" }
orkestra-schema = { path = "../orkestra-schema" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
handlebars = "6"

[dev-dependencies]
indexmap = { version = "2", features = ["serde"] }
