[package]
name = "orkestra-prompt"
version = "0.1.2"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Prompt building for Orkestra"

[lints]
workspace = true

[dependencies]
orkestra-types = { path = "../orkestra-types" }
orkestra-schema = { path = "../orkestra-schema" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
handlebars = "6"

[dev-dependencies]
indexmap = { version = "2", features = ["serde"] }
