[package]
name = "orkestra-types"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Domain types for Orkestra"

[lints]
workspace = true

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
indexmap = { version = "2", features = ["serde"] }
pulldown-cmark = { version = "0.12", default-features = false, features = ["html"] }
